Aspire 8.1 ch01 updates #201 Aspire sample

--- a/ch01/Aspire/AspireSample.AppHost/Properties/launchSettings.json
+++ b/ch01/Aspire/AspireSample.AppHost/Properties/launchSettings.json
@@ -5,25 +5,24 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:17178;http://localhost:15226",
+      "applicationUrl": "https://localhost:17028;http://localhost:15222",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21180",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22135"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21285",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22086"
       }
     },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:15226",
+      "applicationUrl": "http://localhost:15222",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19163",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20168",
-        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19079",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20140"
       }
     }
   }
