--- a/ch15/Codebreaker.Live/Codebreaker.Live.csproj
+++ b/ch15/Codebreaker.Live/Codebreaker.Live.csproj
@@ -13,21 +13,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.0.0-preview.7.24251.11" />
-    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.1" />
-	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.0.1" />
-    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
-    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
+    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.2.0" />
+    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.2.0" />
+	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.2.0" />
+    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.2.0" />
+    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.2.0" />
     <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
-    <PackageReference Include="Grpc.AspNetCore" Version="2.63.0" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.5" />
-    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.25.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.65.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.8" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.27.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
   </ItemGroup>
 
   <ItemGroup>
