--- a/ch15/Codebreaker.Ranking/Codebreaker.Ranking.csproj
+++ b/ch15/Codebreaker.Ranking/Codebreaker.Ranking.csproj
@@ -8,20 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
-    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
-    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
+    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.2.0" />
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.2.0" />
+    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.2.0" />
     <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
     <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.0.0-preview.7.24251.11" />
-   	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.0.1" />
-    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.2.0" />
+   	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.2.0" />
+    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.2.0" />
   </ItemGroup>
 
   <ItemGroup>
