--- a/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0-rc.1.24511.1" />
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
@@ -11,17 +13,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0-rc.1.24511.1" />
   </ItemGroup>
   
   <ItemGroup>
