--- a/ch15/Codebreaker.BotQ/Codebreaker.BotQ.csproj
+++ b/ch15/Codebreaker.BotQ/Codebreaker.BotQ.csproj
@@ -2,27 +2,27 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
  
   <ItemGroup>
-	<PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.2.0" />
-	<PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.0" />
-	<PackageReference Include="Aspire.Hosting.Azure" Version="8.2.0" />
-	<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.2.0" />
-	<PackageReference Include="Aspire.Hosting.Kafka" Version="8.2.0" />
-	<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.2.0" />
-	<PackageReference Include="Azure.Identity" Version="1.12.0" />
+	<PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.0.0-rc.1.24511.1" />
+	<PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0-rc.1.24511.1" />
+	<PackageReference Include="Aspire.Hosting.Azure" Version="9.0.0-rc.1.24511.1" />
+	<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.0.0-rc.1.24511.1" />
+	<PackageReference Include="Aspire.Hosting.Kafka" Version="9.0.0-rc.1.24511.1" />
+	<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.0.0-rc.1.24511.1" />
+	<PackageReference Include="Azure.Identity" Version="1.13.1" />
 	<PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.7.0" />
-	<PackageReference Include="Google.Protobuf" Version="3.28.0" />
-	<PackageReference Include="Grpc.Net.ClientFactory" Version="2.65.0" />
-	<PackageReference Include="Grpc.Tools" Version="2.66.0">
+	<PackageReference Include="Google.Protobuf" Version="3.29.0-rc2" />
+	<PackageReference Include="Grpc.Net.ClientFactory" Version="2.67.0-pre1" />
+	<PackageReference Include="Grpc.Tools" Version="2.67.0">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
-	<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-rc.2.24473.5" />
   </ItemGroup>
   
   <ItemGroup>
