--- a/ch15/Codebreaker.Live/Codebreaker.Live.csproj
+++ b/ch15/Codebreaker.Live/Codebreaker.Live.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
 	<IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
@@ -13,21 +13,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.2.0" />
-    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.2.0" />
-	<PackageReference Include="Aspire.Confluent.Kafka" Version="8.2.0" />
-    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.2.0" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="8.2.0" />
-    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.2.0" />
+    <PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Azure.Storage.Queues" Version="9.0.0-rc.1.24511.1" />
+	<PackageReference Include="Aspire.Confluent.Kafka" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.Kafka" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.0.0-rc.1.24511.1" />
     <PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
-    <PackageReference Include="Grpc.AspNetCore" Version="2.65.0" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
-    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.8" />
-    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.27.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.67.0-pre1" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-rc.2.24474.3" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="9.0.0-rc.2.24474.3" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.28.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
   </ItemGroup>
 
   <ItemGroup>
