--- a/ch01/Aspire/AspireSample.AppHost/AspireSample.AppHost.csproj
+++ b/ch01/Aspire/AspireSample.AppHost/AspireSample.AppHost.csproj
@@ -1,12 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
-    <UserSecretsId>7cf61398-76c2-4e7b-b373-431d051d45cc</UserSecretsId>
+    <UserSecretsId>50ea5fd9-0145-4ef2-9ae3-0089f65c9ed7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.0" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
