ch06 azd updates

--- a/ch06/azure.yaml
+++ b/ch06/azure.yaml
@@ -4,5 +4,5 @@ name: ch06
 services:  
   app:
     language: dotnet
-    project: .\Codebreaker.AppHost\Codebreaker.AppHost.csproj
+    project: ./Codebreaker.AppHost/Codebreaker.AppHost.csproj
     host: containerapp
