--- a/ch06/Codebreaker.AppHost/infra/gameapis.tmpl.yaml
+++ b/ch06/Codebreaker.AppHost/infra/gameapis.tmpl.yaml
@@ -1,3 +1,4 @@
+api-version: 2024-02-02-preview
 location: {{ .Env.AZURE_LOCATION }}
 identity:
   type: UserAssigned
@@ -8,6 +9,9 @@ properties:
   environmentId: {{ .Env.AZURE_CONTAINER_APPS_ENVIRONMENT_ID }}
   configuration:
     activeRevisionsMode: single
+    runtime:
+      dotnet:
+        autoConfigureDataProtection: true
     ingress:
       external: true
       targetPort: {{ targetPortOrDefault 8080 }}
@@ -31,6 +35,8 @@ properties:
             value: "true"
           - name: DataStore
             value: Cosmos
+          - name: HTTP_PORTS
+            value: '{{ targetPortOrDefault 0 }}'
           - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EVENT_LOG_ATTRIBUTES
             value: "true"
           - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_EMIT_EXCEPTION_LOG_ATTRIBUTES
