--- a/ch16/Codebreaker.BotQ/Codebreaker.BotQ.csproj
+++ b/ch16/Codebreaker.BotQ/Codebreaker.BotQ.csproj
@@ -2,26 +2,26 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
  
   <ItemGroup>
-	<PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.1" />
-	<PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
-	<PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
-	<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
-	<PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
-	<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
-	<PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.7.0" />
-	<PackageReference Include="Google.Protobuf" Version="3.27.0" />
-	<PackageReference Include="Grpc.Net.ClientFactory" Version="2.63.0" />
-	<PackageReference Include="Grpc.Tools" Version="2.64.0">
+	<PackageReference Include="Aspire.Azure.Storage.Queues" />
+	<PackageReference Include="Aspire.Hosting.AppHost" />
+	<PackageReference Include="Aspire.Hosting.Azure" />
+	<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" />
+	<PackageReference Include="Aspire.Hosting.Kafka" />
+	<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" />
+	<PackageReference Include="CNinnovation.Codebreaker.GamesClient" />
+	<PackageReference Include="Google.Protobuf" />
+	<PackageReference Include="Grpc.Net.ClientFactory" />
+	<PackageReference Include="Grpc.Tools">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
-	<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+	<PackageReference Include="Microsoft.Extensions.Hosting" />
   </ItemGroup>
   
   <ItemGroup>
