--- a/ch16/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch16/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<InvariantGlobalization>false</InvariantGlobalization>
@@ -21,32 +21,32 @@
 	</ItemGroup>
 
     <ItemGroup>
-		<PackageReference Include="Aspire.Azure.Messaging.EventHubs" Version="8.0.0-preview.7.24251.11" />
-		<PackageReference Include="Aspire.Azure.Storage.Blobs" Version="8.0.1" />
-		<PackageReference Include="Aspire.Azure.Storage.Queues" Version="8.0.1" />
-		<PackageReference Include="Aspire.Confluent.Kafka" Version="8.0.1" />
-		<PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.1" />
-		<PackageReference Include="Aspire.Hosting.Azure" Version="8.0.1" />
-		<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="8.0.1" />
-		<PackageReference Include="Aspire.Hosting.Kafka" Version="8.0.1" />
-		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="8.0.1" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
+		<PackageReference Include="Aspire.Azure.Messaging.EventHubs" />
+		<PackageReference Include="Aspire.Azure.Storage.Blobs" />
+		<PackageReference Include="Aspire.Azure.Storage.Queues" />
+		<PackageReference Include="Aspire.Confluent.Kafka" />
+		<PackageReference Include="Aspire.Hosting.AppHost" />
+		<PackageReference Include="Aspire.Hosting.Azure" />
+		<PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" />
+		<PackageReference Include="Aspire.Hosting.Kafka" />
+		<PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" />
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" />
 	</ItemGroup>
 
 
 	<ItemGroup>
-		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" Version="3.7.0" />
-		<PackageReference Include="Grpc.AspNetCore" Version="2.63.0" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
-		<PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="8.0.5">
+		<PackageReference Include="CNinnovation.Codebreaker.BackendModels" />
+		<PackageReference Include="Grpc.AspNetCore" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+		<PackageReference Include="Microsoft.Extensions.ApiDescription.Server">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
-		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.7.0" />
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
+		<PackageReference Include="CNinnovation.Codebreaker.SqlServer" />
+		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" />
 	</ItemGroup>
 
 	<ItemGroup>
