--- a/ch15/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch15/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -12,11 +12,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Azure.Identity" Version="1.13.1" />
-		<PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.7.0" />
-		<PackageReference Include="Grpc.AspNetCore" Version="2.67.0-pre1" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0-rc.2.24474.3" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+		<PackageReference Include="Azure.Identity" />
+		<PackageReference Include="CNinnovation.Codebreaker.GamesClient" />
+		<PackageReference Include="Grpc.AspNetCore" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+		<PackageReference Include="Swashbuckle.AspNetCore" />
 	</ItemGroup>
 
 	<ItemGroup>
