--- a/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0-rc.1.24511.1" />
+  <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,17 +13,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.SignalR" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.Sql" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Kafka" Version="9.0.0-rc.1.24511.1" />
-    <PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0-rc.1.24511.1" />
+    <PackageReference Include="Aspire.Hosting.AppHost" />
+    <PackageReference Include="Aspire.Hosting.Azure" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" />
+    <PackageReference Include="Aspire.Hosting.Azure.CosmosDB" />
+    <PackageReference Include="Aspire.Hosting.Azure.EventHubs" />
+    <PackageReference Include="Aspire.Hosting.Azure.SignalR" />
+    <PackageReference Include="Aspire.Hosting.Azure.Sql" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" />
+    <PackageReference Include="Aspire.Hosting.Kafka" />
+    <PackageReference Include="Aspire.Hosting.RabbitMQ" />
+    <PackageReference Include="Aspire.Hosting.Redis" />
   </ItemGroup>
   
   <ItemGroup>
