--- a/ch15/Codebreaker.CosmosCreate/Codebreaker.CosmosCreate.csproj
+++ b/ch15/Codebreaker.CosmosCreate/Codebreaker.CosmosCreate.csproj
@@ -8,9 +8,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" Version="9.0.0-rc.1.24511.1" />
-		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.7.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0-rc.2.24474.1">
+		<PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.Cosmos" />
+		<PackageReference Include="CNinnovation.Codebreaker.Cosmos" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" >
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
