Update Docker configuration and Visual Studio solution #224
- Added `<DockerfileContext>` in `Codebreaker.GameAPIs.csproj` and included Azure container tools package.
- Modified `Dockerfile` for updated build context.

--- a/ch05/FinalDocker/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch05/FinalDocker/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>603964e6-08bc-40f9-8505-074b9466a41f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,7 @@
     <PackageReference Include="CNinnovation.Codebreaker.SqlServer" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
   </ItemGroup>
