--- a/ch05/FinalDocker/Codebreaker.GameAPIs/Dockerfile
+++ b/ch05/FinalDocker/Codebreaker.GameAPIs/Dockerfile
@@ -11,10 +11,11 @@ EXPOSE 8080
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj", "Codebreaker.GameAPIs/"]
-RUN dotnet restore "./Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj"
+COPY ["Directory.Packages.props", "."]
+COPY ["ch05/FinalDocker/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj", "ch05/FinalDocker/Codebreaker.GameAPIs/"]
+RUN dotnet restore "./ch05/FinalDocker/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj"
 COPY . .
-WORKDIR "/src/Codebreaker.GameAPIs"
+WORKDIR "/src/ch05/FinalDocker/Codebreaker.GameAPIs"
 RUN dotnet build "./Codebreaker.GameAPIs.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
