Refactor data access to use NuGet packages
This commit removes the `Codebreaker.Data.Cosmos` and `Codebreaker.Data.SqlServer` projects, transitioning to NuGet packages for data access. The solution file and associated configurations have been updated accordingly.

The `Readme.md` has been revised to reflect these changes and provide guidance on configuring the `DataStore` setting. New package references for MongoDB and PostgreSQL have been added in `Codebreaker.AppHost.csproj`.

Significant updates in `Program.cs` enhance the data store configuration logic, supporting multiple environments. The default `DataStore` is now set to `InMemory` in the configuration files.

Context classes and migration files related to the removed projects have been deleted. Model files have been updated to include new properties, and a `DataContextProxy` class has been introduced because of issues with the new Cosmos preview emulator.

--- a/ch04/server/Codebreaker.AppHost/appsettings.json
+++ b/ch04/server/Codebreaker.AppHost/appsettings.json
@@ -6,5 +6,10 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "DataStore": "Cosmos"
+  "DataStore": "InMemory",
+
+  // change this to PreferLocal to use the Azure Cosmos DB local emulator (see the readme file how to install this on your local system, the emulator must be started)
+  // change this to PreferDocker to use the Azure Cosmos DB emulator in a Docker container (Docker Desktop must be installed and started)
+  // change this to UseAzure to use Azure resources while running locally! Check the user secrets (see the readme file)
+  "UseEmulator": "PreferDocker"
 }
