Update dependencies and refactor application structure
- Updated `Directory.Packages.props` with new Aspire package versions and reordered existing packages.
- Added `Directory.Packages.props` to `Chapter15.sln` and removed the `Codebreaker.CosmosCreate` project.
- Enhanced `ApplicationServices.cs` with methods for Redis and Garnet integration.
- Introduced new extension methods in `DistributedApplicationBuilder` for better Aspire integration.
- Refactored `Program.cs` to remove old database initialization logic and implement new data store handling methods.
- Updated configuration files (`appsettings.Development.json` and `appsettings.json`) for clearer data store and cache settings.
- Added `DataContextProxy.cs` to manage game-related database operations because of Cosmos preview emulator issues.
- Using `IServiceScopeFactory` in `GameSummaryEventProcessor.cs` and `GameSummaryKafkaConsumer.cs` because Cosmos preview issues.
- Overall, these changes promote a more modular architecture and better integration with Azure services.

--- a/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
+++ b/ch15/Codebreaker.AppHost/Codebreaker.AppHost.csproj
@@ -9,10 +9,13 @@
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
     <UserSecretsId>e5b2b032-a39b-47c9-a686-c8e69576dc7b</UserSecretsId>
-    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
 
-  <ItemGroup>
+	<PropertyGroup>
+		<NoWarn>$(NoWarn);ASPIRECOSMOSDB001</NoWarn>
+	</PropertyGroup>
+
+	<ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" />
     <PackageReference Include="Aspire.Hosting.Azure" />
     <PackageReference Include="Aspire.Hosting.Azure.AppConfiguration" />
@@ -22,6 +25,7 @@
     <PackageReference Include="Aspire.Hosting.Azure.SignalR" />
     <PackageReference Include="Aspire.Hosting.Azure.Sql" />
     <PackageReference Include="Aspire.Hosting.Azure.Storage" />
+    <PackageReference Include="Aspire.Hosting.Garnet" />
     <PackageReference Include="Aspire.Hosting.Kafka" />
     <PackageReference Include="Aspire.Hosting.RabbitMQ" />
     <PackageReference Include="Aspire.Hosting.Redis" />
