--- a/ch15/Codebreaker.AppHost/appsettings.json
+++ b/ch15/Codebreaker.AppHost/appsettings.json
@@ -6,8 +6,22 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
+  // change this to InMemory to use an in-memory database for testing purposes
+  // change this to DistributedMemory to use a distributed in-memory
+  // change this to SqlServer to use SQL Server with EF Core
+  // change this to Cosmos to use Azure Cosmos DB with EF Core
+  // change this to PostgreSQL to use PostgreSQL with EF Core
   "DataStore": "Cosmos",
+  // change this to OnPremises to use Kafka, or Azure to use Event Hubs
   "StartupMode": "Azure",
+  // change this to PreferLocal to use the Azure Cosmos DB local emulator (see the readme file how to install this on your local system, the emulator must be started)
+  // change this to PreferDocker to use the Azure Cosmos DB emulator in a Docker container (Docker Desktop must be installed and started)
+  // change this to UseAzure to use Azure resources while running locally! Check the user secrets (see the readme file)
+  "UseEmulator": "PreferDocker",
+  // change this to Redis to use Redis as a distributed cache
+  // change this to Garnet to use Garnet as a distributed cache
+  // change this to None to not use a distributed cache
+  "Cache": "Redis",
   "ConnectionStrings": {
     "StartupMode": "Connection string startup"
   },
