ch04 #235 backend updates
- Added `CNinnovation.Codebreaker.Postgres` package reference.
- Upgraded SDK version to `9.2.0`.
- Cleaned up MongoDB code and refined Cosmos DB handling.
- Configured PostgreSQL setup and adjusted database creation logic.
- Removed unused Cosmos endpoint code in `CreateDatabaseEndpoint.cs`.
- Updated `GlobalUsings.cs` to include PostgreSQL.
- Modified `gameapis.http` with response variable
- Refactored OpenTelemetry setup in `Extensions.cs`

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -44,6 +44,7 @@
     <PackageVersion Include="CNinnovation.Codebreaker.BackendModels" Version="3.8.0" />
     <PackageVersion Include="CNinnovation.Codebreaker.Cosmos" Version="3.8.0" />
     <PackageVersion Include="CNinnovation.Codebreaker.GamesClient" Version="3.8.0" />
+    <PackageVersion Include="CNinnovation.Codebreaker.Postgres" Version="3.8.0-preview.1.13" />
     <PackageVersion Include="CNinnovation.Codebreaker.SqlServer" Version="3.8.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
     <PackageVersion Include="Grpc.AspNetCore" Version="2.70.0" />
