--- a/ch04/server/Codebreaker.AppHost/appsettings.Development.json
+++ b/ch04/server/Codebreaker.AppHost/appsettings.Development.json
@@ -9,7 +9,7 @@
   // change this to Cosmos to use the Azure Cosmos DB database
   // change this to Postgres to use the PostgreSQL database
   // change this to InMemory to use the in-memory repository
-  "DataStore": "InMemory",
+  "DataStore": "Cosmos",
 
   // this is the connection string for the Azure Cosmos DB Emulator with a well-known account key
   // To use it start the local installed emulator and change the DataStore configuration to Cosmos 
