--- a/ch04/server/Codebreaker.AppHost/appsettings.json
+++ b/ch04/server/Codebreaker.AppHost/appsettings.json
@@ -6,7 +6,7 @@
       "Aspire.Hosting.Dcp": "Warning"
     }
   },
-  "DataStore": "InMemory",
+  "DataStore": "Cosmos",
 
   // change this to PreferLocal to use the Azure Cosmos DB local emulator (see the readme file how to install this on your local system, the emulator must be started)
   // change this to PreferDocker to use the Azure Cosmos DB emulator in a Docker container (Docker Desktop must be installed and started)
